--- a/style.css
+++ b/style.css
@@ -3,42 +3,75 @@
 }
 
 body {
-    background: rgb(2, 0, 36);
-    background: linear-gradient(
-      90deg,
+  background: rgb(2, 0, 36);
+  background: linear-gradient(90deg,
       rgba(2, 0, 36, 1) 0%,
       rgba(9, 9, 121, 1) 24%,
-      rgba(0, 212, 255, 1) 100%
-    );
+      rgba(0, 212, 255, 1) 100%);
 }
+
 h1,
 h3,
 h4 {
   text-align: center;
   color: black;
-}   
+}
 
-#header{
-    font-size: 30px;
-    position:center;
+#fundo {
+    border: 2px solid rgb(255, 255, 255);
+    margin: 3rem;
+    padding: 2rem;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+
+.header {
+  font-size: 90px;
+  position: center;
 
 }
-#container button {
-    background-color: aliceblue;
-    border: 1px solid rgb(255, 255, 255);
-    color: rgb(39, 39, 43);
-  }
-  #container button:hover {
-    background-color: rgb(224, 208, 163);
-    border: 1px solid rgb(255, 255, 255);
-  }
 
-  .navbar-brand strong {
-    display: inline-block;
-    position: absolute;
-    margin-top: 25px;
-    margin-left: 30px;
-    font-size: 30px;
-    
+#container button {
+  background-color: aliceblue;
+  border: 1px solid rgb(255, 255, 255);
+  color: rgb(39, 39, 43);
+}
+
+#container button:hover {
+  background-color: rgb(224, 208, 163);
+  border: 1px solid rgb(255, 255, 255);
+}
+
+.navbar-brand strong {
+  display: inline-block;
+  position: absolute;
+  margin-top: 25px;
+  margin-left: 30px;
+  font-size: 30px;
+  word-break: break-all;
+}
+.d-grid{
+  padding-top:2rem ;
+  padding-bottom:2rem ;
+}
+@media (max-width: 350px) {
+     h1{font-size:10px;
+      word-break: break-all;} 
+      .form-control{
+        font-size:12px;
+      }
+}
+@media (max-width: 800px) {
+  #fundo {
+    margin: 0rem;
+    padding: 0rem;
+    font-size:20px;
+
+  }
+  .form-floating{
+    font-size:10px;
+    word-break: break-all;
+
   }
   
+}
